v0.1.4 Fix NullPointerException when running /inv